replace email link width a javascript function

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,7 @@
             <p>Ik specialiseer mij in het bouwen van website’s gebasseerd op WordPress, webapplicaties aan de hand van AngularJS / React en het ondersteunen van ontwikkelteams als Scrumm-Master.</p>
             <p><i>Ik ben op dit moment niet beschikbaar voor freelance projecten.</i></p>
         </h6>
-        <a href="mailto:tdwesten@gmail.com" class="button">Laat iets van je horen</a>
+        <a href="#" id="email-link" class="button">Laat iets van je horen</a>
     </div>
 
     <div class="socials">
