google html tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <title>{{site.title}} - {{site.subtitle}}</title>
     <meta name="description" content="Ik specialiseer mij in het bouwen van website’s gebasseerd op WordPress, webapplicaties aan de hand van AngularJS / React en het ondersteunen van ontwikkelteams als Scrum-Master."/>
+    <meta name="google-site-verification" content="wKsvY-rFf93ExgOs0PsBsU_YEEk1YDYXINRpRXirxSg" />
     <style>
         {% include css/main.css %}
     </style>
