Dqna en Waar kan ik stemmen toegevoegd

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,17 +5,15 @@
             <p>{{site.subtitle}}</p>
         </div>
     </header>
-
     <div class="content">
-        <h2>Hallo!</h2>
+        <h2>Hallo! 👋</h2>
         <h6>
-            <p>Ik ben Thomas van der Westen, Full-Stack Developer en werkzaam als Full-Stack Developer bij <a href="https://jannesmannes.nl" traget="_blank">Jannes & Mannes</a> in Den Haag.</p>
-            <p>Ik specialiseer mij in het bouwen van website’s gebasseerd op WordPress, webapplicaties aan de hand van AngularJS / React en het ondersteunen van ontwikkelteams als Scrumm-Master.</p>
+            <p>Ik ben Thomas van der Westen, vinyl-lover, amateur hardloper en Professioneel pixelpuzzelaar (Full-Stack Developer) bij <a href="https://jannesmannes.nl" traget="_blank">Jannes & Mannes</a> in Den Haag.</p>
+            <p>Ik specialiseer mij in het bouwen van maatwerk WordPress thema's, webapplicaties aan de hand van AngularJS / React en het ondersteunen van ontwikkelteams als Scrumm-Master.</p>
             <p><i>Ik ben op dit moment niet beschikbaar voor freelance projecten.</i></p>
         </h6>
         <a href="#" id="email-link" class="button">Laat iets van je horen</a>
     </div>
-
     <div class="socials">
         <a href="https://t.me/tdwesten" traget="_blank">
             <svg width="27" height="27" viewBox="0 0 27 27" xmlns="http://www.w3.org/2000/svg">
