--- a/_includes/project.html
+++ b/_includes/project.html
@@ -15,5 +15,11 @@
         >
     </div>
     <h2>{{project.title}}</h2>
-    <h3>{{project.description}}<span><span class="sep"> - </span> In dienst @ {{project.employeur}}</span></h3>
+    <h3>{{project.description}}
+
+        {% if project.employeur %}
+            <span><span class="sep"> - </span> In dienst @ {{project.employeur}}</span>
+        {% endif %}
+
+    </h3>
 </article>
