--- a/_includes/project.html
+++ b/_includes/project.html
@@ -10,7 +10,8 @@
         </div>
         <img
                 data-src="/assets/images/{{project.image_file}}-smaller.jpg"
-                data-srcset="/assets/images/{{project.image_file}}-smaller.jpg 368w, /assets/images/{{project.image_file}}-small.jpg 768w, /assets/images/{{project.image_file}}.jpg 1000w, /assets/images/{{project.image_file}}-large.jpg 1200w, /assets/images/{{project.image_file}}-larger.jpg 1600w "
+                data-srcset="/assets/images/{{project.image_file}}-small.jpg 425w, /assets/images/{{project.image_file}}.jpg 1000w, /assets/images/{{project.image_file}}-large.jpg 1200w, /assets/images/{{project.image_file}}-larger.jpg 1600w"
+                sizes="(min-width: 1400px) 70vw, (min-width: 1200px) 50vw, (min-width: 768px) 40vw, 90vw"
                 alt="Screenshot van {{project.title}}"
         >
     </div>
