--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,12 @@
     <title>{{site.title}} - {{site.subtitle}}</title>
     <meta name="description" content="Ik specialiseer mij in het bouwen van website’s gebasseerd op WordPress, webapplicaties aan de hand van AngularJS / React en het ondersteunen van ontwikkelteams als Scrum-Master."/>
     <meta name="google-site-verification" content="wKsvY-rFf93ExgOs0PsBsU_YEEk1YDYXINRpRXirxSg" />
-
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Thomas van der Westen - Full-Stack Developer">
+    <meta property="og:description" content="{{site.description_line_one}}">
+    <meta property="og:url" content="http://tdwesten.nl">
+    <meta property="og:image" content="http://tdwesten.nl/assets/images/og-image-thomasvanderwesten.png">
     {% include favicon.html %}
-
     <style>
         {% include css/main.css %}
     </style>
