--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,8 +8,8 @@
     <div class="content">
         <h2>Hallo! 👋</h2>
         <h6>
-            <p>Ik ben Thomas van der Westen, vinyl-lover, amateur hardloper en Professioneel pixelpuzzelaar (Full-Stack Developer) bij <a href="https://jannesmannes.nl" traget="_blank">Jannes & Mannes</a> in Den Haag.</p>
-            <p>Ik specialiseer mij in het bouwen van maatwerk WordPress thema's, webapplicaties aan de hand van AngularJS / React en het ondersteunen van ontwikkelteams als Scrumm-Master.</p>
+            <p>{{site.description_line_one}}</p>
+            <p>{{site.description_line_two}}</p>
             <p><i>Ik ben op dit moment niet beschikbaar voor freelance projecten.</i></p>
         </h6>
         <a href="#" id="email-link" class="button">Laat iets van je horen</a>
