og image to jpg

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Thomas van der Westen - Full-Stack Developer">
     <meta property="og:description" content="{{site.description_line_one}}">
     <meta property="og:url" content="http://tdwesten.nl">
-    <meta property="og:image" content="http://tdwesten.nl/assets/images/og-image-thomasvanderwesten.png">
+    <meta property="og:image" content="/assets/images/og-image-thomasvanderwesten.jpg">
     {% include favicon.html %}
     <style>
         {% include css/main.css %}
