--- a/_includes/project.html
+++ b/_includes/project.html
@@ -8,6 +8,11 @@
             <div class="browser__topbar__dots"></div>
             <div class="browser__topbar__dots"></div>
         </div>
+        <div class="browser__loader">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <img
                 data-src="/assets/images/{{project.image_file}}-smaller.jpg"
                 data-srcset="/assets/images/{{project.image_file}}-small.jpg 425w, /assets/images/{{project.image_file}}.jpg 1000w, /assets/images/{{project.image_file}}-large.jpg 1200w, /assets/images/{{project.image_file}}-larger.jpg 1600w"
