--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Thomas van der Westen - Full-Stack Developer">
     <meta property="og:description" content="{{site.description_line_one}}">
-    <meta property="og:url" content="http://tdwesten.nl">
+    <meta property="og:url" content="https://tdwesten.nl">
     <meta property="og:image" content="https://tdwesten.nl/assets/images/og-image-thomasvanderwesten.jpg">
     {% include favicon.html %}
     <style>
