--- a/_includes/project.html
+++ b/_includes/project.html
@@ -13,9 +13,9 @@
             <div></div>
             <div></div>
         </div>
-        <img    src="https://static.tdwesten.nl/assets/images/image_placeholder.jpg"
-                data-src="https://static.tdwesten.nl/assets/images/{{project.image_file}}-smaller.jpg"
-                data-srcset="https://static.tdwesten.nl/assets/images/{{project.image_file}}-small.jpg 425w, https://static.tdwesten.nl/assets/images/{{project.image_file}}.jpg 1000w, https://static.tdwesten.nl/assets/images/{{project.image_file}}-large.jpg 1200w, https://static.tdwesten.nl/assets/images/{{project.image_file}}-larger.jpg 1600w"
+        <img    src="/assets/images/image_placeholder.jpg"
+                data-src="/assets/images/{{project.image_file}}-smaller.jpg"
+                data-srcset="/assets/images/{{project.image_file}}-small.jpg 425w, /assets/images/{{project.image_file}}.jpg 1000w, /assets/images/{{project.image_file}}-large.jpg 1200w, /assets/images/{{project.image_file}}-larger.jpg 1600w"
                 sizes="(min-width: 1400px) 70vw, (min-width: 1200px) 50vw, (min-width: 768px) 40vw, 90vw"
                 alt="Screenshot van {{project.title}}"
         >
