Update google search console ver. code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <title>{{site.title}} - {{site.subtitle}}</title>
-    <meta name="description" content="Ik specialiseer mij in het bouwen van website’s gebasseerd op WordPress, webapplicaties aan de hand van AngularJS / React en het ondersteunen van ontwikkelteams als Scrum-Master."/>
-    <meta name="google-site-verification" content="wKsvY-rFf93ExgOs0PsBsU_YEEk1YDYXINRpRXirxSg" />
+    <meta name="description" content="Ik specialiseer mij in het bouwen van website’s gebasseerd op WordPress, webapplicaties aan de hand van AngularJS / React / VueJs en het ondersteunen van ontwikkelteams als Scrum-Master."/>
+    <meta name="google-site-verification" content="fXcc3avzr-UkvXnVYI40Jil5ZE9Mq0EOY4cn30soHt4" />
     <meta property="og:type" content="website">
     <meta property="og:title" content="Thomas van der Westen - Full-Stack Developer">
     <meta property="og:description" content="{{site.description_line_one}}">
