--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,9 +10,9 @@
         <h6>
             <span>{{site.description_line_one}}</span><br><br>
             <span>{{site.description_line_two}}</span><br><br>
-            <span><i>Ik ben op dit moment niet beschikbaar voor freelance projecten.</i></span>
+            <span><i>Ik ben beschikbaar voor nieuwe projecten vanaf begin april.</i></span>
         </h6>
-        <a href="#" id="email-link" class="button">Laat iets van je horen</a>
+        <a href="#" id="email-link" class="button">Contact opnemen</a>
     </div>
     <div class="socials">
         <a href="https://t.me/tdwesten" target="_blank">
