changed og:image url

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Thomas van der Westen - Full-Stack Developer">
     <meta property="og:description" content="{{site.description_line_one}}">
-    <meta property="og:url" content="https://tdwesten.nl">
-    <meta property="og:image" content="https://tdwesten.nl/assets/images/og-image-thomasvanderwesten.jpg">
+    <meta property="og:url" content="https://thomasvanderwesten.nl">
+    <meta property="og:image" content="https://thomasvanderwesten.nl/assets/images/og-image-thomasvanderwesten.jpg">
     {% include favicon.html %}
     <style>
         {% include css/main.css %}
