Updated for a new job at Pixelpillow
Signed-off-by: Thomas van der Westen <tdwesten@gmail.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,8 +10,9 @@
         <h6>
             <span>{{site.description_line_one}}</span><br><br>
             <span>{{site.description_line_two}}</span><br><br>
-            <span><i>Ik ben beschikbaar voor nieuwe projecten vanaf begin april.</i></span>
+            <span><i><strike>Ik ben beschikbaar voor nieuwe projecten vanaf begin april.</strike></i></span>
         </h6>
+
         <a href="#" id="email-link" class="button">Contact opnemen</a>
     </div>
     <div class="socials">
