Add titles to links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,7 +22,12 @@
     <a href="#" id="email-link" class="button">Contact opnemen</a>
   </div>
   <div class="socials">
-    <a href="https://t.me/tdwesten" target="_blank" rel="noreferrer">
+    <a
+      href="https://t.me/tdwesten"
+      target="_blank"
+      rel="noreferrer"
+      title="Contact me on Telegram"
+    >
       <svg
         width="27"
         height="27"
@@ -36,7 +41,12 @@
         />
       </svg>
     </a>
-    <a href="https://twitter.com/tdwesten" target="_blank" rel="noreferrer">
+    <a
+      href="https://twitter.com/tdwesten"
+      target="_blank"
+      rel="noreferrer"
+      title="Contact me on Twitter"
+    >
       <svg
         width="23"
         height="23"
@@ -50,7 +60,12 @@
         />
       </svg>
     </a>
-    <a href="https://github.com/tdwesten" target="_blank" rel="noreferrer">
+    <a
+      href="https://github.com/tdwesten"
+      target="_blank"
+      rel="noreferrer"
+      title="Contact me on Twitter"
+    >
       <svg
         width="23"
         height="23"
